style: fix jank/jumpiness

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,28 @@ a:visited {
   flex: 1;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: center;
+  min-width: 100vw;
+}
+
+.sliders {  
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start;
+  width: 50%;
+  max-width: 40rem;
+}
+
+.phrases {
+  align-items: center;
+  width: 60%;
+  max-width: 40rem;
+}
+
 .siteTitle {
   font-size: 2rem;
   font-weight: normal;
@@ -42,6 +64,11 @@ a:visited {
 
 .siteTagline {
   font-size: large;
+}
+
+.phrasesHeader {
+  margin-top: 2rem;
+  justify-self: left;
 }
 
 .phrase {
@@ -79,7 +106,6 @@ a:visited {
 }
 
 .App-footer {
-  background-color: #06131a;
   padding: 20px;
   text-align: left;
   width: 100%;
